--- a/src/ActionRunner/ActionRunner.csproj
+++ b/src/ActionRunner/ActionRunner.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MarkdownLinksVerifier\MarkdownLinksVerifier.csproj" />
+    <ProjectReference Include="..\RedirectionVerifier\RedirectionVerifier.csproj" />
   </ItemGroup>
 
 </Project>
