--- a/.github/workflows/current-branch-dogfood.yml
+++ b/.github/workflows/current-branch-dogfood.yml
@@ -11,4 +11,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Validate links
+      env:
+        GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       uses: ./
